// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractLeft should extract left data when data tree has a depth of 2 1`] = `
Array [
  Array [
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "E",
            },
          ],
          "qType": "E",
        },
      ],
      "qType": "N",
    },
    Object {
      "qElemNo": 1,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "E",
            },
          ],
          "qType": "E",
        },
      ],
      "qType": "N",
    },
    Object {
      "qCanCollapse": true,
      "qElemNo": 2,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "E",
            },
          ],
          "qType": "N",
        },
        Object {
          "qCanCollapse": true,
          "qElemNo": 1,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "N",
            },
            Object {
              "qElemNo": 1,
              "qSubNodes": Array [],
              "qType": "N",
            },
          ],
          "qType": "N",
        },
      ],
      "qType": "N",
    },
    null,
    null,
  ],
  Array [
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "E",
        },
      ],
      "qType": "E",
    },
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "E",
        },
      ],
      "qType": "E",
    },
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "E",
        },
      ],
      "qType": "N",
    },
    Object {
      "qCanCollapse": true,
      "qElemNo": 1,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "N",
        },
        Object {
          "qElemNo": 1,
          "qSubNodes": Array [],
          "qType": "N",
        },
      ],
      "qType": "N",
    },
    null,
  ],
  Array [
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "E",
    },
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "E",
    },
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "E",
    },
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "N",
    },
    Object {
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
    },
  ],
]
`;

exports[`extractLeft should extract left data with first node expanded 1`] = `
Array [
  Array [
    Object {
      "qCanCollapse": true,
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "N",
        },
        Object {
          "qElemNo": 1,
          "qSubNodes": Array [],
          "qType": "N",
        },
      ],
      "qType": "N",
    },
    null,
    Object {
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
    },
    Object {
      "qElemNo": 2,
      "qSubNodes": Array [],
      "qType": "N",
    },
  ],
  Array [
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "N",
    },
    Object {
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
    },
    null,
    null,
  ],
]
`;

exports[`extractLeft should extract left data with no nodes expanded 1`] = `
Array [
  Array [
    Object {
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "N",
    },
    Object {
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
    },
    Object {
      "qElemNo": 2,
      "qSubNodes": Array [],
      "qType": "N",
    },
  ],
]
`;
